# Agent-Workflow

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agentflow/: __init__.py  exceptions.py
agentflow/cli/: main.py
agentflow/core/: agent.py  config.py  context.py  executor.py  loader.py  templating.py  tool.py
agentflow/hooks/: base.py
agentflow/providers/: fake.py  ollama.py
agentflow/schemas/: __init__.py  task_schema.py
agentflow/utils/: discovery.py  logging.py  reporter.py  serialization.py
docs/: design.md
examples/cv_pipeline/: candidate_info.txt  task.yaml  tools.md
examples/cv_pipeline/hooks/: post_run.py
examples/cv_pipeline/subtasks/10_fetch_job/: instructions.md  task.yaml  tools.md
examples/cv_pipeline/subtasks/20_draft_cv/: instructions.md  task.yaml  tools.md
examples/cv_pipeline/subtasks/30_review_fit/: instructions.md  task.yaml
examples/hello_world/: instructions.md  task.yaml
examples/release_pipeline/: .gitignore  project_info.txt  requirements.txt  task.yaml
examples/release_pipeline/.staging/: manifest.json
examples/release_pipeline/hooks/: post_run.py
examples/release_pipeline/output/: deployment_notification.txt  production_manifest.json  release_report.json
examples/release_pipeline/shared/: tools.md
examples/release_pipeline/src/: config.py  main.py  utils.py
examples/release_pipeline/tests/: test_utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_context.py  test_executor.py  test_inheritance.py  test_loader.py  test_schemas.py  test_templating.py  test_tools.py
(+46 files in other folders)
